[package]
name = "monkey2rust"
version = "0.1.0"
edition = "2021"
authors = ["kanarus <kanarus786@gmail.com>"]
description = "macro for writing Monkey lang in .rs file"
documentation = "https://docs.rs/monkey2rust/"
homepage = "https://crates.io/crates/monkey2rust"
repository = "https://github.com/kana-rus/monkey2rust"
readme = "README.md"
keywords = ["monkey-language"]
categories = ["games", "simulation"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[lib]
proc-macro = true
